{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 839,
  "lineage": "106377e5-2802-2441-ba10-e2492d5fa384",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kubectl-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef1f0b06bdb9b50e",
            "association_id": "eipassoc-0a6fc6a93302ca85a",
            "domain": "vpc",
            "id": "eipalloc-0ef1f0b06bdb9b50e",
            "instance": "i-066210a2585964857",
            "network_border_group": "us-west-2",
            "network_interface": "eni-03ee75065840ec874",
            "private_dns": "ip-10-10-2-227.us-west-2.compute.internal",
            "private_ip": "10.10.2.227",
            "public_dns": "ec2-52-32-130-117.us-west-2.compute.amazonaws.com",
            "public_ip": "52.32.130.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kubectl-server",
            "aws_security_group.kubectl-vpc-sg",
            "aws_subnet.kubectl_subnet-1",
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubectl-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccea833bf267252a",
            "arn": "arn:aws:ec2:us-west-2:231299874646:instance/i-066210a2585964857",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066210a2585964857",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernet",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ee75065840ec874",
            "private_dns": "ip-10-10-2-227.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.227",
            "public_ip": "52.32.130.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f66a724e11dbd41",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01580545b9edddcae",
            "tags": {
              "Name": "kubectl-server-0"
            },
            "tags_all": {
              "Name": "kubectl-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002f3b466cce97496"
            ]
          },
          "dependencies": [
            "aws_security_group.kubectl-vpc-sg",
            "aws_subnet.kubectl_subnet-1",
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubectl-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:internet-gateway/igw-0e2008170f25b5e61",
            "id": "igw-0e2008170f25b5e61",
            "owner_id": "231299874646",
            "tags": {
              "Name": "kubectl-igw"
            },
            "tags_all": {
              "Name": "kubectl-igw"
            },
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "dependencies": [
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubectl-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:route-table/rtb-05f05b0a9ba53759f",
            "id": "rtb-05f05b0a9ba53759f",
            "owner_id": "231299874646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2008170f25b5e61",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubectl-rt"
            },
            "tags_all": {
              "Name": "kubectl-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubectl-igw",
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubectl-rt_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f85aad3e1f17404",
            "route_table_id": "rtb-05f05b0a9ba53759f",
            "subnet_id": "subnet-01580545b9edddcae"
          },
          "dependencies": [
            "aws_internet_gateway.kubectl-igw",
            "aws_route_table.kubectl-rt",
            "aws_subnet.kubectl_subnet-1",
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubectl-rt_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c5f35bd0f1b2536",
            "route_table_id": "rtb-05f05b0a9ba53759f",
            "subnet_id": "subnet-018fa35d2974cfaf7"
          },
          "dependencies": [
            "aws_internet_gateway.kubectl-igw",
            "aws_route_table.kubectl-rt",
            "aws_subnet.kubectl_subnet-2",
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubectl-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:security-group/sg-002f3b466cce97496",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f3b466cce97496",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kubectl-vpc-sg",
            "name_prefix": "",
            "owner_id": "231299874646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubectl_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:subnet/subnet-01580545b9edddcae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01580545b9edddcae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231299874646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubectl_subnet1"
            },
            "tags_all": {
              "Name": "kubectl_subnet1"
            },
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "dependencies": [
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubectl_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:subnet/subnet-018fa35d2974cfaf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018fa35d2974cfaf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231299874646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubectl_subnet2"
            },
            "tags_all": {
              "Name": "kubectl_subnet2"
            },
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "dependencies": [
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubectl-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:vpc/vpc-0aa333a41c35bcfcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08d7792fa90203d69",
            "default_route_table_id": "rtb-0084f56d8363c6be6",
            "default_security_group_id": "sg-02e135f26c5d3f080",
            "dhcp_options_id": "dopt-0b0624b788217d3be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa333a41c35bcfcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0084f56d8363c6be6",
            "owner_id": "231299874646"
          }
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:231299874646:security-group/sg-066648e6557cf210c",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066648e6557cf210c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-test",
            "name_prefix": "",
            "owner_id": "231299874646",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa333a41c35bcfcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubectl-vpc"
          ]
        }
      ]
    }
  ]
}